--- a/knit.css
+++ b/knit.css
@@ -14,7 +14,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 <body class="w3-content" style="max-width:1200px">
 
  <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" type= "text/css" href="index.html" media="print"/>
 
 
 <!-- Sidebar/menu -->
