--- a/knit.css
+++ b/knit.css
@@ -4,7 +4,7 @@ body {
 
 p {
   font-family:  "Times New Roman", Times, serif;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 h1 {
@@ -13,6 +13,10 @@ h1 {
 
 h2.destination {
   font-family: cursive;
+}
+
+h4 {
+  color: dogerblue;
 }
 
 h5 {
