--- a/knit.css
+++ b/knit.css
@@ -15,6 +15,14 @@ h4 {
   color: dogerblue;
 }
 
+blockquote { 
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 26px;
+  margin-right: 26px;
+}
+
 .title {
   color: darkmagenta;
 }
